--- a/index.html
+++ b/index.html
@@ -1,7 +1,19 @@
 ---
 layout: default
-title:
-description: 这是fofore的个人blog
-keywords: 
-isIndex: true
+title: 我的Blog
 ---
+
+<h2>{{ page.title }}</h2>
+
+<p>最新文章</p>
+
+<ul>
+
+　　{% for post in site.posts %}
+
+　　　　<li>{{ post.date | date_to_string }} <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
+
+　　{% endfor %}
+
+</ul>
+
