--- a/index.html
+++ b/index.html
@@ -1,7 +1,18 @@
 ---
 layout: default
-title: 我的Blog
+title: 
+Description: The man who named fofore want to keep something in mind and here.
+Keywords: fofore, vim, Ruby, Python, Network, Linux, markdown, jekyll, Github, HHKB, PURE, 
 ---
+
+<div class="banner">
+    <div class="b-cnt">
+        <div class="ui-grid-25 ui-grid-bottom ui-grid-right">
+            <div class="banner-cnt" id="J_banner">
+            </div> 
+        </div>
+    </div>   
+</div>
 
 <h2>{{ page.title }}</h2>
 
