--- a/about.html
+++ b/about.html
@@ -7,5 +7,5 @@ title: About Min Ming Qian
 
 <p>I am powered by fruit juice.</p>
 
-<p>This blog is powered by <a href="http://github.com/mojombo/jekyll">Jekyll</a>.</p>
+<p>This blog is powered by <a href="http://github.com/mojombo/jekyll">Jekyll</a> and <a href="https://github.com">Github</a>.</p>
 
