--- a/about.html
+++ b/about.html
@@ -1,9 +1,9 @@
 ---
 layout: default
-title: About Min Ming Qian
+title: About Me
 ---
 
-<p>I am Min Ming Qian</p>
+<p>I am Nothing</p>
 
 <p>I am powered by fruit juice.</p>
 
