--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 ---
 layout: default
-title: fofore QMM
+title: fofore
 Description: The man who named fofore want to keep something in mind and here.
 Keywords: fofore, vim, Ruby, Python, Network, Linux, markdown, jekyll, Github, HHKB, PURE, 
 ---
 
 <p class="intro">
-    Network Engineer in Wuxi, China.
+    This is the introduction.
 </p>
 
 <ul class="posts">
