--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@ Keywords: fofore, vim, Ruby, Python, Network, Linux, markdown, jekyll, Github, H
 
 　　{% for post in site.posts %}
 
-　　　　<li><span>{{ post.date | date_to_string }}</span> &raquo <a href="{{ site.baseurl }}{{ post.url }}">{{ post.title }}</a></li>
+　　　　<li><span>{{ post.date | date_to_string }}</span> &raquo <a href="{{ post.url }}">{{ post.title }}</a></li>
 
 　　{% endfor %}
 
