--- a/play/index.html
+++ b/play/index.html
@@ -14,7 +14,7 @@ layout: none
 		</div>
 		<div class="col-md-4">
 			<div class="thumbnail">
-				<img src="/images/rackets/ryn9900.jpg" alt="iforce">
+				<img src='/images/rackets/RYN9900.jpg' alt="iforce">
 			</div>
 		</div>
 		<div class="col-md-4">
