--- a/play/index.html
+++ b/play/index.html
@@ -6,20 +6,30 @@ layout: none
 
 
 <div class="container">
+	<h1>Badminton Rackets</h1>
 	<div class="row">
-		<div class="col-md-4">
+		<div class="col-md-2">
 			<div class="thumbnail">
 				<img src="/images/rackets/iforce.jpg" alt="iforce">
+				<div class="caption" style="text-align: center;">
+					<p>NS9900</p>
+				</div>
 			</div>
 		</div>
-		<div class="col-md-4">
+		<div class="col-md-2">
 			<div class="thumbnail">
 				<img src='/images/rackets/RYN9900.jpg' alt="iforce">
+				<div class="caption" style="text-align: center;">
+					<p>i-Force</p>
+				</div>
 			</div>
 		</div>
-		<div class="col-md-4">
+		<div class="col-md-2">
 			<div class="thumbnail">
 				<img src="/images/rackets/zforce-2.jpg" alt="iforce">
+				<div class="caption" style="text-align: center;">
+					<p>z-Force II</p>
+				</div>
 			</div>
 		</div>
 	</div>
