--- a/play/index.html
+++ b/play/index.html
@@ -8,24 +8,24 @@ layout: none
 <div class="container">
 	<h1>Badminton Rackets</h1>
 	<div class="row">
-		<div class="col-md-2">
-			<div class="thumbnail">
+		<div  class="col-md-2">
+			<div id="iforce" class="thumbnail slideLeft">
 				<img src="/images/rackets/iforce.jpg" alt="iforce">
-				<div class="caption" style="text-align: center;">
-					<p>NS9900</p>
-				</div>
-			</div>
-		</div>
-		<div class="col-md-2">
-			<div class="thumbnail">
-				<img src='/images/rackets/RYN9900.jpg' alt="iforce">
 				<div class="caption" style="text-align: center;">
 					<p>i-Force</p>
 				</div>
 			</div>
 		</div>
 		<div class="col-md-2">
-			<div class="thumbnail">
+			<div id="ns9900" class="thumbnail slideLeft">
+				<img src='/images/rackets/RYN9900.jpg' alt="iforce">
+				<div class="caption" style="text-align: center;">
+					<p>NS9900</p>
+				</div>
+			</div>
+		</div>
+		<div class="col-md-2">
+			<div id="zforce" class="thumbnail slideLeft">
 				<img src="/images/rackets/zforce-2.jpg" alt="iforce">
 				<div class="caption" style="text-align: center;">
 					<p>z-Force II</p>
@@ -34,3 +34,21 @@ layout: none
 		</div>
 	</div>
 </div>
+
+
+
+
+
+<script>
+	$(window).scroll(function() {
+		$('.thumbnail').each(function(){
+		var imagePos = $(this).offset().top;
+
+		var topOfWindow = $(window).scrollTop();
+			if (imagePos < topOfWindow+400) {
+				$(this).addClass("slideLeft");
+			}
+		});
+	});
+</script>
+
