update the hover of the play

--- a/play/index.html
+++ b/play/index.html
@@ -9,7 +9,7 @@ layout: none
 	<h1>Badminton Rackets</h1>
 	<div class="row">
 		<div  class="col-md-2">
-			<div id="iforce" class="thumbnail slideLeft">
+			<div id="iforce" class="thumbnail slideLeft hvr-border-fade">
 				<img src="/images/rackets/iforce.jpg" alt="iforce">
 				<div class="caption" style="text-align: center;">
 					<p>i-Force</p>
@@ -17,7 +17,7 @@ layout: none
 			</div>
 		</div>
 		<div class="col-md-2">
-			<div id="ns9900" class="thumbnail slideLeft">
+			<div id="ns9900" class="thumbnail slideLeft  hvr-border-fade">
 				<img src='/images/rackets/RYN9900.jpg' alt="iforce">
 				<div class="caption" style="text-align: center;">
 					<p>NS9900</p>
@@ -25,7 +25,7 @@ layout: none
 			</div>
 		</div>
 		<div class="col-md-2">
-			<div id="zforce" class="thumbnail slideLeft">
+			<div id="zforce" class="thumbnail slideLeft  hvr-border-fade">
 				<img src="/images/rackets/zforce-2.jpg" alt="iforce">
 				<div class="caption" style="text-align: center;">
 					<p>z-Force II</p>
