--- a/portfolio/01 - JavaScript Drum Kit copy/index.html
+++ b/portfolio/01 - JavaScript Drum Kit copy/index.html
@@ -1,11 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>JS Drum Kit</title>
-  <link rel="stylesheet" href="style.css">
-</head>
-<body>
+---
+title: play
+layout: none
+---
 
 
   <div class="keys">
@@ -82,5 +78,3 @@
 
 </script>
 
-</body>
-</html>
