--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -5,6 +5,7 @@ layout: default
 
 
 <ul>
-    <li>http://fofore.github.io/portfolio/drum</li>
-    <li>http://fofore.github.io/portfolio/02clock</li>
+    <li><a href="http://fofore.github.io/portfolio/drum"> drum </a></li>
+    <li><a href="http://fofore.github.io/portfolio/02clock"> clock </a></li>
+    <li></li>
 </ul>
