--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -7,5 +7,6 @@ layout: default
 <ul>
     <li><a href="http://fofore.github.io/portfolio/drum"> drum </a></li>
     <li><a href="http://fofore.github.io/portfolio/02clock"> clock </a></li>
+    <li><a href="http://fofore.github.io/portfolio/flexbox"> flexbox </a></li>
     <li></li>
 </ul>
