--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -8,5 +8,6 @@ layout: default
     <li><a href="http://fofore.github.io/portfolio/drum"> drum </a></li>
     <li><a href="http://fofore.github.io/portfolio/02clock"> clock </a></li>
     <li><a href="http://fofore.github.io/portfolio/flexbox"> flexbox </a></li>
+    <li><a href="http://fofore.github.io/portfolio/type"> type </a></li>
     <li></li>
 </ul>
