--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -10,5 +10,6 @@ layout: default
     <li><a href="http://fofore.github.io/portfolio/flexbox"> flexbox </a></li>
     <li><a href="http://fofore.github.io/portfolio/type"> type </a></li>
     <li><a href="http://fofore.github.io/portfolio/draw"> draw </a></li>
+    <li><a href="http://fofore.github.io/portfolio/inbox"> inbox </a></li>
     <li></li>
 </ul>
