--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -11,5 +11,6 @@ layout: default
     <li><a href="http://fofore.github.io/portfolio/type"> type </a></li>
     <li><a href="http://fofore.github.io/portfolio/draw"> draw </a></li>
     <li><a href="http://fofore.github.io/portfolio/inbox"> inbox </a></li>
+    <li><a href="http://fofore.github.io/portfolio/video"> video </a></li>
     <li></li>
 </ul>
